[package]
name = "labeller"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.93"
clap = { version = "4.5.21", features = ["derive"] }
crossterm = "0.28.1"
ratatui = { version = "0.29.0", features = ["all-widgets"] }
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
